--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -91,8 +91,15 @@
              <div class="control-group">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 4px;">
                     <label style="margin: 0;">Bucket Size (pixel multiplier)</label>
-                    <input type="number" id="bucketSizeInput" min="1" max="500" step="1" value="4" 
-                           style="width: 70px; padding: 2px 6px; text-align: right; font-size: 12px;">
+                    <div style="display: flex; gap: 4px; align-items: center;">
+                        <button id="autoAdjustBucket" onclick="autoAdjustBucketSize()" 
+                                style="padding: 3px 10px; font-size: 11px; font-weight: bold; background: #2a5a8a; border: 1px solid #4488ff; color: #4488ff; border-radius: 3px; cursor: pointer;"
+                                title="Calculate optimal bucket size to keep total buckets ≤ 10,000">
+                            AUTO
+                        </button>
+                        <input type="number" id="bucketSizeInput" min="1" max="500" step="1" value="4" 
+                               style="width: 70px; padding: 2px 6px; text-align: right; font-size: 12px;">
+                    </div>
                 </div>
                 <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="font-size: 11px; opacity: 0.6; min-width: 20px;">1</span>
