resolution concept, data finally seems okay.  improved controls

--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -47,12 +47,17 @@
             
              <div class="control-group">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 4px;">
-                    <label style="margin: 0;">Bucket Size</label>
+                    <label style="margin: 0;">Resolution</label>
                     <div style="display: flex; gap: 4px; align-items: center;">
-                        <button id="autoAdjustBucket" onclick="autoAdjustBucketSize()" 
+                        <button id="maxResolutionBtn" onclick="setMaxResolution()" 
+                                style="padding: 3px 10px; font-size: 11px; font-weight: bold; background: #2a5a2a; border: 1px solid #44ff44; color: #44ff44; border-radius: 3px; cursor: pointer;"
+                                title="Maximum resolution (bucket size = 1)">
+                            MAX
+                        </button>
+                        <button id="defaultResolutionBtn" onclick="setDefaultResolution()" 
                                 style="padding: 3px 10px; font-size: 11px; font-weight: bold; background: #2a5a8a; border: 1px solid #4488ff; color: #4488ff; border-radius: 3px; cursor: pointer;"
-                                title="Calculate optimal bucket size automatically">
-                            AUTO
+                                title="Reset to optimal default resolution">
+                            DEFAULT
                         </button>
                         <input type="number" id="bucketSizeInput" min="1" max="500" step="1" value="4" 
                                style="width: 70px; padding: 2px 6px; text-align: right; font-size: 12px;">
@@ -60,22 +65,22 @@
                 </div>
                 <div style="margin-top: 8px; display: flex; gap: 10px;">
                     <div style="flex: 1; display: flex; flex-direction: column; gap: 5px;">
-                        <div style="font-size: 10px; font-weight: bold; color: #4488ff; text-align: center; margin-bottom: 2px;">SMALLER</div>
+                        <div style="font-size: 10px; font-weight: bold; color: #44ff44; text-align: center; margin-bottom: 2px;">HIGHER DETAIL</div>
                         <button class="bucket-adjust-btn" onclick="adjustBucketSize(-10)" style="font-size: 14px; padding: 8px 12px;">-10</button>
                         <button class="bucket-adjust-btn" onclick="adjustBucketSize(-5)" style="font-size: 14px; padding: 8px 12px;">-5</button>
                         <button class="bucket-adjust-btn" onclick="adjustBucketSize(-1)" style="font-size: 14px; padding: 8px 12px;">-1</button>
                     </div>
                     <div style="flex: 1; display: flex; flex-direction: column; gap: 5px;">
-                        <div style="font-size: 10px; font-weight: bold; color: #ff8844; text-align: center; margin-bottom: 2px;">BIGGER</div>
+                        <div style="font-size: 10px; font-weight: bold; color: #ff8844; text-align: center; margin-bottom: 2px;">LOWER DETAIL</div>
                         <button class="bucket-adjust-btn" onclick="adjustBucketSize(1)" style="font-size: 14px; padding: 8px 12px;">+1</button>
                         <button class="bucket-adjust-btn" onclick="adjustBucketSize(5)" style="font-size: 14px; padding: 8px 12px;">+5</button>
                         <button class="bucket-adjust-btn" onclick="adjustBucketSize(10)" style="font-size: 14px; padding: 8px 12px;">+10</button>
                     </div>
                 </div>
                 <div style="display: flex; align-items: center; gap: 8px; margin-top: 8px;">
-                    <span style="font-size: 11px; opacity: 0.6; min-width: 20px;">1</span>
+                    <span style="font-size: 11px; opacity: 0.6; min-width: 40px;">MAX</span>
                     <input type="range" id="bucketSize" min="1" max="500" step="1" value="4" style="flex: 1;">
-                    <span style="font-size: 11px; opacity: 0.6; min-width: 30px; text-align: right;">500</span>
+                    <span style="font-size: 11px; opacity: 0.6; min-width: 40px; text-align: right;">MIN</span>
                 </div>
                 <!-- 
                     BUCKETING EXPLANATION (PROTECTED - DO NOT REMOVE):
