--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -106,7 +106,9 @@
                 </div>
                 <div style="margin-top: 8px; display: flex; gap: 5px; flex-wrap: wrap;">
                     <button id="vertExagBtn2x" data-multiplier="2" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(2)">2x</button>
+                    <button id="vertExagBtn3x" data-multiplier="3" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(3)">3x</button>
                     <button id="vertExagBtn4x" data-multiplier="4" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(4)">4x</button>
+                    <button id="vertExagBtn6x" data-multiplier="6" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(6)">6x</button>
                     <button id="vertExagBtn10x" data-multiplier="10" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(10)">10x</button>
                     <button id="vertExagBtn25x" data-multiplier="25" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(25)">25x</button>
                     <button id="vertExagBtn50x" data-multiplier="50" style="font-size: 10px; padding: 4px 8px;" onclick="setVertExagMultiplier(50)">50x</button>
