--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -5,12 +5,12 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Altitude Maps - 3D Elevation Viewer</title>
 
- <!-- Select2 for typeahead dropdowns -->
- <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+ <!-- Removed Select2 CSS (not used; avoids CSS parse warnings) -->
  <link rel="stylesheet" href="css/viewer-advanced.css">
 </head>
 <body>
  <div id="container">
+  <div id="contact-email" class="contact-email" title="Contact">akasatanahamayarawan@gmail.com</div>
  <div id="canvas-container"></div>
  <div id="info" aria-live="polite">
 			<button id="hud-minimize" title="Hide HUD">–</button>
@@ -46,7 +46,15 @@
  <div class="spinner"></div>
  </div>
 
- <h2>Load Log</h2>
+ <div class="activityLogHeader">
+ <div class="title">Load Log</div>
+ <div class="actions">
+ <button id="copy-logs-loading" title="Copy all logs" onclick="copyActivityLogs()">Copy all logs</button>
+ </div>
+ </div>
+ <div style="font-size: 11px; color:#aaa; margin-bottom:6px;">
+ Saves significant events you can paste back into coding agents to explain what happened.
+ </div>
  <div id="activityLog"></div>
  </div>
 
@@ -81,14 +89,14 @@
 
  <!-- Compact clickable scale: MAX to Less -->
  <div id="resolution-scale" class="resolution-scale" title="Click or drag to adjust resolution">
- <button id="resolutionMaxLabel" onclick="setMaxResolution()">MAX</button>
+                    <button id="resolutionMaxLabel">Sharp</button>
  <div class="resolution-scale-track">
  <div class="resolution-scale-fill" id="resolutionScaleFill"></div>
  <div class="resolution-scale-handle" id="resolutionScaleHandle"></div>
  <div class="resolution-scale-tag" id="resolutionScaleTag">1×</div>
  <div class="resolution-scale-ticks" id="resolutionScaleTicks"></div>
  </div>
- <div class="resolution-scale-label right">Less</div>
+                    <button id="resolutionLessButton">Blur</button>
  </div>
 
  <!--
@@ -106,8 +114,8 @@
  </div>
  <div style="display: flex; align-items: center; gap: 8px;">
  <span style="font-size: 11px; opacity: 0.6; min-width: 20px;">0%</span>
- <input type="range" id="tileGap" min="0" max="99" step="1" value="1" style="flex: 1;">
- <input type="number" id="tileGapInput" min="0" max="99" step="1" value="1"
+ <input type="range" id="tileGap" min="0" max="99" step="1" value="0" style="flex: 1;">
+ <input type="number" id="tileGapInput" min="0" max="99" step="1" value="0"
  style="width: 60px; padding: 2px 6px; text-align: right; font-size: 12px;">
  </div>
  </div>
@@ -170,24 +178,7 @@
  <div id="colorSchemeDescription" style="margin-top:6px; font-size: 11px; color:#88bbff;"></div>
  </div>
 
- <h2>Highlights</h2>
- <div class="control-group">
- <div style="display: grid; grid-template-columns: 120px 1fr; gap: 8px; align-items: center;">
- <label for="highlightEnabled" style="margin: 0;">Enable Highlights</label>
- <input type="checkbox" id="highlightEnabled" />
- <label for="highlightMetric" style="margin: 0;">Metric</label>
- <select id="highlightMetric">
- <option value="elevation">Elevation</option>
- <option value="slope">Slope (deg)</option>
- </select>
- <label for="highlightMin" style="margin: 0;">Min</label>
- <input type="number" id="highlightMin" step="1" value="100" style="width: 100%; padding: 4px; font-size: 12px;" />
- <label for="highlightMax" style="margin: 0;">Max</label>
- <input type="number" id="highlightMax" step="1" value="500" style="width: 100%; padding: 4px; font-size: 12px;" />
- </div>
- </div>
-
- <div class="control-group">
+<div class="control-group">
  <div style="display: flex; align-items: center; gap: 8px;">
  <input type="checkbox" id="flatLightingEnabled" />
  <label for="flatLightingEnabled" style="margin: 0;">Flat lighting (no shading)</label>
@@ -224,7 +215,15 @@
  <button onclick="exportImage()" style="padding: 6px; font-size: 11px;">Screenshot</button>
  </div>
 
- <h2>Load Log</h2>
+ <div class="activityLogHeader">
+ <div class="title">Load Log</div>
+ <div class="actions">
+ <button id="copy-logs-controls" title="Copy all logs" onclick="copyActivityLogs()">Copy all logs</button>
+ </div>
+ </div>
+ <div style="font-size: 11px; color:#aaa; margin-bottom:6px;">
+ Saves significant events you can paste back into coding agents to explain what happened.
+ </div>
  <div id="activityLog"></div>
  </div>
  </div>
