--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -20,7 +20,6 @@
 			<div id="hud-row-elev"><b>Elevation:</b> <span id="hud-elev">--</span></div>
 			<div id="hud-row-slope"><b>Slope:</b> <span id="hud-slope">--</span></div>
 			<div id="hud-row-aspect"><b>Aspect:</b> <span id="hud-aspect">--</span></div>
-			<div id="hud-row-footprint"><b>Footprint:</b> <span id="hud-footprint">--</span></div>
 			<div id="hud-row-dist" style="display:none;"><b>Distance to border:</b> <span id="hud-dist">--</span></div>
 			<div id="hud-row-relief" style="display:none;"><b>Relief radius (100 m):</b> <span id="hud-relief">--</span>
 			</div>
@@ -36,7 +35,6 @@
 					<label><input type="checkbox" id="hud-show-elev" checked> Elevation</label>
 					<label><input type="checkbox" id="hud-show-slope" checked> Slope</label>
 					<label><input type="checkbox" id="hud-show-aspect" checked> Aspect</label>
-					<label><input type="checkbox" id="hud-show-footprint" checked> Footprint</label>
 					<label><input type="checkbox" id="hud-show-dist"> Distance to border</label>
 					<label><input type="checkbox" id="hud-show-relief"> Relief radius (100 m)</label>
 				</div>
@@ -90,7 +88,8 @@
 				</div>
 			</div>
 
-			<h2>Resolution</h2>
+			<h2>Resolution <span id="resolution-info" style="font-size: 0.7em; margin-left: 8px; float: right;"></span>
+			</h2>
 
 			<div class="control-group" style="position: relative;">
 				<!-- Loading overlay for resolution changes -->
@@ -255,15 +254,15 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 	<!-- Camera Control Schemes -->
-	<script src="js/camera-schemes.js?v=1.334"></script>
-	<script src="js/ground-plane-camera.js?v=1.334"></script>
-	<script src="js/ground-plane-google-earth.js?v=1.334"></script>
+	<script src="js/camera-schemes.js?v=1.335"></script>
+	<script src="js/ground-plane-camera.js?v=1.335"></script>
+	<script src="js/ground-plane-google-earth.js?v=1.335"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- Main viewer application -->
-	<script src="js/viewer-advanced.js?v=1.334"></script>
+	<script src="js/viewer-advanced.js?v=1.335"></script>
 </body>
 
 </html>
