--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -7,7 +7,7 @@
 	<title>Altitude Maps - 3D Elevation Viewer</title>
 
 	<!-- Removed Select2 CSS (not used; avoids CSS parse warnings) -->
-	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.335.2">
+	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.335.3">
 </head>
 
 <body>
@@ -257,15 +257,18 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 	<!-- Camera Control Schemes -->
-	<script src="js/camera-schemes.js?v=1.335.2"></script>
-	<script src="js/ground-plane-camera.js?v=1.335.2"></script>
-	<script src="js/ground-plane-google-earth.js?v=1.335.2"></script>
+	<script src="js/camera-schemes.js?v=1.335.3"></script>
+	<script src="js/ground-plane-camera.js?v=1.335.3"></script>
+	<script src="js/ground-plane-google-earth.js?v=1.335.3"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+	<!-- Color schemes -->
+	<script src="js/color-schemes.js?v=1.335.3"></script>
+
 	<!-- Main viewer application -->
-	<script src="js/viewer-advanced.js?v=1.335.2"></script>
+	<script src="js/viewer-advanced.js?v=1.335.3"></script>
 </body>
 
 </html>
