--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -291,6 +291,12 @@
 	<!-- GPU detection and benchmarking -->
 	<script src="js/gpu-info.js?v=1.340"></script>
 
+	<!-- Geometry and spatial utilities -->
+	<script src="js/geometry-utils.js?v=1.340"></script>
+
+	<!-- Data formatting utilities -->
+	<script src="js/format-utils.js?v=1.340"></script>
+
 	<!-- Main viewer application -->
 	<script src="js/viewer-advanced.js?v=1.340"></script>
 </body>
