--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -299,39 +299,42 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 	<!-- Camera Control Schemes -->
-	<script src="camera-schemes.js?v=1.340"></script>
-	<script src="ground-plane-camera.js?v=1.340"></script>
-	<script src="ground-plane-google-earth.js?v=1.340"></script>
+	<script src="js/camera-schemes.js?v=1.340"></script>
+	<script src="js/ground-plane-camera.js?v=1.340"></script>
+	<script src="js/ground-plane-google-earth.js?v=1.340"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- Color schemes -->
-	<script src="color-schemes.js?v=1.340"></script>
+	<script src="js/color-schemes.js?v=1.340"></script>
 
 	<!-- GPU detection and benchmarking -->
-	<script src="gpu-info.js?v=1.340"></script>
+	<script src="js/gpu-info.js?v=1.340"></script>
 
 	<!-- Geometry and spatial utilities -->
-	<script src="geometry-utils.js?v=1.340"></script>
+	<script src="js/geometry-utils.js?v=1.340"></script>
 
 	<!-- Data formatting utilities -->
-	<script src="format-utils.js?v=1.340"></script>
+	<script src="js/format-utils.js?v=1.340"></script>
 
 	<!-- Activity log utilities -->
-	<script src="activity-log.js?v=1.340"></script>
+	<script src="js/activity-log.js?v=1.340"></script>
 
 	<!-- Edge markers (N/E/S/W directional labels) -->
-	<script src="edge-markers.js?v=1.340"></script>
+	<script src="js/edge-markers.js?v=1.340"></script>
 
 	<!-- UI loading states (loading screen and progress bar) -->
-	<script src="ui-loading.js?v=1.340"></script>
+	<script src="js/ui-loading.js?v=1.340"></script>
 
 	<!-- Borders and contours (border lines and elevation contours) -->
-	<script src="borders-contours.js?v=1.340"></script>
+	<script src="js/borders-contours.js?v=1.340"></script>
+
+	<!-- Resolution controls (bucket size slider and presets) -->
+	<script src="js/resolution-controls.js?v=1.340"></script>
 
 	<!-- Main viewer application -->
-	<script src="viewer-advanced.js?v=1.340"></script>
+	<script src="js/viewer-advanced.js?v=1.340"></script>
 </body>
 
 </html>
