--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -7,40 +7,57 @@
 	<title>Altitude Maps - 3D Elevation Viewer</title>
 
 	<!-- Removed Select2 CSS (not used; avoids CSS parse warnings) -->
-	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.341">
+	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.347">
 </head>
 
 <body>
 	<div id="container">
 		<div id="contact-email" class="contact-email" title="Contact">akasatanahamayarawan@gmail.com</div>
 		<div id="canvas-container"></div>
-		<div id="info" aria-live="polite">
+		<div id="info" aria-live="polite" style="display:none;">
 			<button id="hud-minimize" title="Hide HUD">-</button>
-			<button id="hud-config" title="HUD settings"></button>
-			<div id="hud-row-elev"><b>Elevation:</b> <span id="hud-elev">--</span></div>
-			<div id="hud-row-slope"><b>Slope:</b> <span id="hud-slope">--</span></div>
-			<div id="hud-row-aspect"><b>Aspect:</b> <span id="hud-aspect">--</span></div>
-			<div id="hud-row-dist" style="display:none;"><b>Distance to border:</b> <span id="hud-dist">--</span></div>
-			<div id="hud-row-relief" style="display:none;"><b>Relief radius (100 m):</b> <span id="hud-relief">--</span>
-			</div>
+
+			<!-- Tabular data display to prevent jitter -->
+			<table id="hud-data-table">
+				<tr id="hud-row-elev">
+					<td class="hud-label">Elevation:</td>
+					<td class="hud-value" id="hud-elev">--</td>
+				</tr>
+				<tr id="hud-row-slope">
+					<td class="hud-label">Slope:</td>
+					<td class="hud-value" id="hud-slope">--</td>
+				</tr>
+				<tr id="hud-row-aspect">
+					<td class="hud-label">Aspect:</td>
+					<td class="hud-value" id="hud-aspect">--</td>
+				</tr>
+				<tr id="hud-row-relief" style="display:none;">
+					<td class="hud-label">Relief (100m):</td>
+					<td class="hud-value" id="hud-relief">--</td>
+				</tr>
+			</table>
+
+			<!-- Config panel at bottom -->
 			<div id="hud-config-panel" style="display:none;">
-				<div style="margin-top:6px;">
-					<b>Units</b>
-					<label><input type="radio" name="hud-units" value="metric" checked> Metric</label>
-					<label><input type="radio" name="hud-units" value="imperial"> Imperial</label>
-					<label><input type="radio" name="hud-units" value="both"> Both</label>
+				<div class="hud-config-section">
+					<div class="hud-config-header">Units</div>
+					<label class="hud-config-label"><input type="radio" name="hud-units" value="metric" checked>
+						Metric</label>
+					<label class="hud-config-label"><input type="radio" name="hud-units" value="imperial">
+						Imperial</label>
+					<label class="hud-config-label"><input type="radio" name="hud-units" value="both"> Both</label>
 				</div>
-				<div style="margin-top:6px;">
-					<b>Show</b>
-					<label><input type="checkbox" id="hud-show-elev" checked> Elevation</label>
-					<label><input type="checkbox" id="hud-show-slope" checked> Slope</label>
-					<label><input type="checkbox" id="hud-show-aspect" checked> Aspect</label>
-					<label><input type="checkbox" id="hud-show-dist"> Distance to border</label>
-					<label><input type="checkbox" id="hud-show-relief"> Relief radius (100 m)</label>
+				<div class="hud-config-section">
+					<div class="hud-config-header">Show Fields</div>
+					<label class="hud-config-label"><input type="checkbox" id="hud-show-elev" checked> Elevation</label>
+					<label class="hud-config-label"><input type="checkbox" id="hud-show-slope" checked> Slope</label>
+					<label class="hud-config-label"><input type="checkbox" id="hud-show-aspect" checked> Aspect</label>
+					<label class="hud-config-label"><input type="checkbox" id="hud-show-relief"> Relief</label>
 				</div>
 			</div>
+
+			<button id="hud-config" title="HUD settings">settings</button>
 		</div>
-		<button id="hud-expand" title="Show HUD">HUD</button>
 		<button id="mobile-ui-toggle" aria-label="Toggle controls">Hide Controls</button>
 
 		<div id="loading">
@@ -85,22 +102,16 @@
 			<h2>Region</h2>
 
 			<!-- Region Navigation -->
-			<div class="region-nav-container">
-				<button id="region-prev" class="region-nav-btn region-nav-prev" title="Previous region">
-					<span class="nav-arrow">&lt;</span>
+			<div class="region-nav-container" style="display: none;">
+				<button id="region-prev" class="region-nav-btn region-nav-prev" title="Previous region (↑)">
+					<span class="nav-arrow">↑</span>
 					<span class="nav-hint" id="region-prev-hint"></span>
 				</button>
 				<div class="region-nav-current" id="region-nav-current">Select a region</div>
-				<button id="region-next" class="region-nav-btn region-nav-next" title="Next region">
+				<button id="region-next" class="region-nav-btn region-nav-next" title="Next region (↓)">
 					<span class="nav-hint" id="region-next-hint"></span>
-					<span class="nav-arrow">&gt;</span>
+					<span class="nav-arrow">↓</span>
 				</button>
-			</div>
-
-			<!-- Recently Opened Regions -->
-			<div id="recent-regions-container" style="display: none;">
-				<div class="recent-regions-header">Recently Opened</div>
-				<div id="recent-regions-list" class="recent-regions-list"></div>
 			</div>
 
 			<!-- Region Selector Dropdown -->
@@ -110,6 +121,12 @@
 				<div id="regionDropdown"
 					style="position: absolute; top: 42px; left: 0; right: 0; background:#0a0a0a; border: 1px solid#5588cc; border-radius: 6px; max-height: 260px; overflow-y: auto; z-index: 20; display: none; box-shadow: 0 8px 24px rgba(68,136,255,0.2);">
 				</div>
+			</div>
+
+			<!-- Recent Regions -->
+			<div id="recent-regions-container" style="margin-top: 12px;">
+				<div style="font-size: 11px; color: #888; margin-bottom: 6px; font-weight: 600;">RECENT</div>
+				<div id="recent-regions-list" class="recent-regions-list"></div>
 			</div>
 
 			<h2>Resolution <span id="resolution-info" style="font-size: 0.7em; margin-left: 8px; float: right;"></span>
@@ -190,7 +207,7 @@
 
 
 
-			<div class="control-group">
+			<div class="control-group" style="display: none;">
 				<select id="renderMode">
 					<option value="bars" selected>3D Rectangular Prisms</option>
 					<option value="surface">Smooth Surface</option>
@@ -225,28 +242,12 @@
 				<div id="colorSchemeDescription" style="margin-top:6px; font-size: 11px; color:#88bbff;"></div>
 			</div>
 
-			<h2>Shading & Lighting</h2>
+			<h2>Display</h2>
 
 			<div class="control-group">
-				<select id="shadingMode">
-					<option value="natural">Natural (Lambert)</option>
-					<option value="flat">Flat (Unlit)</option>
-					<option value="hillshade">Hillshade (Grayscale)</option>
-					<option value="hillshade-tinted">Hillshade (Color Tinted)</option>
-				</select>
-			</div>
-
-			<h2>Overlays</h2>
-
-			<div class="control-group">
-				<div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
-					<input type="checkbox" id="showContours" />
-					<label for="showContours" style="margin: 0;">Contour Lines</label>
-				</div>
 				<div style="display: flex; align-items: center; gap: 8px;">
-					<label for="contourInterval" style="min-width: 100px;">Interval (m):</label>
-					<input type="number" id="contourInterval" min="10" max="1000" step="10" value="100"
-						style="width: 80px; padding: 4px; font-size: 12px;" />
+					<input type="checkbox" id="showHUD" />
+					<label for="showHUD" style="margin: 0;">Show HUD Overlay</label>
 				</div>
 			</div>
 
@@ -299,42 +300,42 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 	<!-- Camera Control Schemes -->
-	<script src="js/camera-schemes.js?v=1.340"></script>
-	<script src="js/ground-plane-camera.js?v=1.340"></script>
-	<script src="js/ground-plane-google-earth.js?v=1.340"></script>
+	<script src="js/camera-schemes.js?v=1.347"></script>
+	<script src="js/ground-plane-camera.js?v=1.347"></script>
+	<script src="js/ground-plane-google-earth.js?v=1.347"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- Color schemes -->
-	<script src="js/color-schemes.js?v=1.340"></script>
+	<script src="js/color-schemes.js?v=1.347"></script>
 
 	<!-- GPU detection and benchmarking -->
-	<script src="js/gpu-info.js?v=1.340"></script>
+	<script src="js/gpu-info.js?v=1.347"></script>
 
 	<!-- Geometry and spatial utilities -->
-	<script src="js/geometry-utils.js?v=1.340"></script>
+	<script src="js/geometry-utils.js?v=1.347"></script>
 
 	<!-- Data formatting utilities -->
-	<script src="js/format-utils.js?v=1.340"></script>
+	<script src="js/format-utils.js?v=1.347"></script>
 
 	<!-- Activity log utilities -->
-	<script src="js/activity-log.js?v=1.340"></script>
+	<script src="js/activity-log.js?v=1.347"></script>
 
 	<!-- Edge markers (N/E/S/W directional labels) -->
-	<script src="js/edge-markers.js?v=1.340"></script>
+	<script src="js/edge-markers.js?v=1.347"></script>
 
 	<!-- UI loading states (loading screen and progress bar) -->
-	<script src="js/ui-loading.js?v=1.340"></script>
-
-	<!-- Borders and contours (border lines and elevation contours) -->
-	<script src="js/borders-contours.js?v=1.340"></script>
+	<script src="js/ui-loading.js?v=1.347"></script>
 
 	<!-- Resolution controls (bucket size slider and presets) -->
-	<script src="js/resolution-controls.js?v=1.340"></script>
+	<script src="js/resolution-controls.js?v=1.347"></script>
+
+	<!-- State connectivity (US states only) -->
+	<script src="js/state-connectivity.js?v=1.347"></script>
 
 	<!-- Main viewer application -->
-	<script src="js/viewer-advanced.js?v=1.340"></script>
+	<script src="js/viewer-advanced.js?v=1.347"></script>
 </body>
 
 </html>
