--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -7,7 +7,7 @@
 	<title>Altitude Maps - 3D Elevation Viewer</title>
 
 	<!-- Removed Select2 CSS (not used; avoids CSS parse warnings) -->
-	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.363">
+	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.366">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 					<td class="hud-value" id="hud-aspect">--</td>
 				</tr>
 				<tr id="hud-row-relief" style="display:none;">
-					<td class="hud-label">Relief (100m):</td>
+					<td class="hud-label">Relief (5km):</td>
 					<td class="hud-value" id="hud-relief">--</td>
 				</tr>
 			</table>
@@ -307,39 +307,39 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 	<!-- Camera Control Schemes -->
-	<script src="js/camera-schemes.js?v=1.363"></script>
-	<script src="js/ground-plane-camera.js?v=1.363"></script>
-	<script src="js/ground-plane-google-earth.js?v=1.363"></script>
+	<script src="js/camera-schemes.js?v=1.366"></script>
+	<script src="js/ground-plane-camera.js?v=1.366"></script>
+	<script src="js/ground-plane-google-earth.js?v=1.366"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- Color schemes -->
-	<script src="js/color-schemes.js?v=1.363"></script>
+	<script src="js/color-schemes.js?v=1.366"></script>
 
 	<!-- Geometry and spatial utilities -->
-	<script src="js/geometry-utils.js?v=1.363"></script>
+	<script src="js/geometry-utils.js?v=1.366"></script>
 
 	<!-- Data formatting utilities -->
-	<script src="js/format-utils.js?v=1.363"></script>
+	<script src="js/format-utils.js?v=1.366"></script>
 
 	<!-- Activity log utilities -->
-	<script src="js/activity-log.js?v=1.363"></script>
+	<script src="js/activity-log.js?v=1.366"></script>
 
 	<!-- Edge markers (N/E/S/W directional labels) -->
-	<script src="js/edge-markers.js?v=1.363"></script>
+	<script src="js/edge-markers.js?v=1.366"></script>
 
 	<!-- UI loading states (loading screen and progress bar) -->
-	<script src="js/ui-loading.js?v=1.363"></script>
+	<script src="js/ui-loading.js?v=1.366"></script>
 
 	<!-- Resolution controls (bucket size slider and presets) -->
-	<script src="js/resolution-controls.js?v=1.363"></script>
+	<script src="js/resolution-controls.js?v=1.366"></script>
 
 	<!-- State connectivity (US states only) -->
-	<script src="js/state-connectivity.js?v=1.363"></script>
+	<script src="js/state-connectivity.js?v=1.366"></script>
 
 	<!-- Main viewer application -->
-	<script src="js/viewer-advanced.js?v=1.363"></script>
+	<script src="js/viewer-advanced.js?v=1.366"></script>
 </body>
 
 </html>
